--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="gcf logo 1.png" alt="Profile Picture">
+					<img class="profile-pic" src="nick photo.png" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Division of Support Services, Green Climate Fund</p>
 				</div>
 				<div class="col">
-					<img src="assets/gcf logo 2.png" alt="Company Logo">
+					<img src="assets/gcf logo.jpeg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
