--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Division of Support Services, Green Climate Fund</p>
 				</div>
 				<div class="col">
-					<img src="assets/green_climate_fund_logo.png" alt="Company Logo">
+					<img src="assets/gcf_logo.png" alt="Company Logo">
 				</div>
 			</div>
 		</div>
