--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 			<div class="row">
 				<div class="col"></div>
 				<div class="col is-5">
-					<img class="profile-pic" src="nick photo.png" alt="Profile Picture">
+					<img class="profile-pic" src="nick photo prof.jpeg" alt="Profile Picture">
 				</div>
 				<div class="col"></div>
 			</div>
@@ -26,25 +26,25 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Nick Bigornia</p>
-					<p class="text-title-company">Process Optimisation Assistant</p>
-					<p class="text-title-company">Division of Support Services, Green Climate Fund</p>
+					<p class="text-title-company">Graduate Student</p>
+					<p class="text-title-company">Defence Studies Department, King's College London</p>
 				</div>
 				<div class="col">
-					<img src="assets/gcf_logo.png" alt="Company Logo">
+					<img src="assets/gcf logo.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:kbigornia@gcfund.org">
+		<a href="mailto:nick.bigornia@outlook.com">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-email.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">kbigornia@gcfund.org</p>
+						<p class="text-detail">nick.bigornia@outlook.com</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -55,14 +55,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="tel:+821072406331">
+		<a href="tel:+31647062042">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-phone.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">(+82) 10 7240 6331</p>
+						<p class="text-detail">+31 (0) 6 47 06 20 42</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.greenclimate.fund">
+		<a href="https://www.kcl.ac.uk/dsd">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-website.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">greenclimate.fund</p>
+						<p class="text-detail">kcl.ac.uk/dsd</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="http://naver.me/535NWczb">
+		<a href="https://www.google.com/maps/place/King's+College+London/@51.5114864,-0.1181857,17z/data=!3m1!4b1!4m5!3m4!1s0x487604b5a3b455dd:0xb0643efb7ed0928d!8m2!3d51.5114864!4d-0.115997">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/icon-address.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">175 Art center-daero Yeonsu-gu Incheon 22004 Republic of Korea</p>
+						<p class="text-detail">Strand London WC2R 2LS United Kingdom</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
