--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-email.svg" alt="Email Icon"">
+						<img src="assets/mail.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">nick.bigornia@outlook.com</p>
@@ -59,7 +59,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-phone.svg" alt="Phone Icon"">
+						<img src="assets/rocket.svg" alt="Phone Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">+31 (0) 6 47 06 20 42</p>
@@ -77,7 +77,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-website.svg" alt="Website Icon"">
+						<img src="assets/globe.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">kcl.ac.uk/dsd</p>
@@ -95,7 +95,7 @@
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
-						<img src="assets/icon-address.svg" alt="Address Icon"">
+						<img src="assets/pin.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
 						<p class="text-detail">Strand London WC2R 2LS United Kingdom</p>
