--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Nick Bigornia</p>
-					<p class="text-title-company">Graduate Student</p>
-					<p class="text-title-company">Defence Studies Department, King's College London</p>
+					<p class="text-title-company">Office of Confidentiality and Security</p>
+					<p class="text-title-company">Organization for the Prohibition of Chemical Weapons</p>
 				</div>
 				<div class="col">
 					<img src="assets/kcl logo.jpg" alt="Company Logo">
@@ -37,14 +37,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:nick.bigornia@outlook.com">
+		<a href="mailto:nica.bigornia@opcw.org">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/mail.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">nick.bigornia@outlook.com</p>
+						<p class="text-detail">nica.bigornia@opcw.org</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,7 +73,7 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.kcl.ac.uk/dsd">
+		<a href="https://www.opcw.org">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/King's+College+London/@51.5114864,-0.1181857,17z/data=!3m1!4b1!4m5!3m4!1s0x487604b5a3b455dd:0xb0643efb7ed0928d!8m2!3d51.5114864!4d-0.115997">
+		<a href="https://www.google.com/maps/place/Organisation+for+the+Prohibition+of+Chemical+Weapons+(OPCW)/@52.0913677,4.2131638,13z/data=!4m9!1m2!2m1!1sopcw!3m5!1s0x47c5b0c7e15ee87f:0xfa7c7523f39a9e0c!8m2!3d52.0913812!4d4.2832443!15sCgRvcGN3kgEbYXNzb2NpYXRpb25fb3Jfb3JnYW5pemF0aW9u4AEA">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/pin.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Strand London WC2R 2LS United Kingdom</p>
+						<p class="text-detail">Johan de Wittlaan 32, 2517 JR Den Haag</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
