--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<p class="text-title-company">Organization for the Prohibition of Chemical Weapons</p>
 				</div>
 				<div class="col">
-					<img src="assets/kcl logo.jpg" alt="Company Logo">
+					<img src="assets/opcw logo.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
