--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 						<img src="assets/globe.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">kcl.ac.uk/dsd</p>
+						<p class="text-detail">opcw.org</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
