--- a/index.html
+++ b/index.html
@@ -26,25 +26,25 @@
 			<div class="row name-title-company">
 				<div class="col is-6">
 					<p class="text-name">Nick Bigornia</p>
-					<p class="text-title-company">Office of Confidentiality and Security</p>
-					<p class="text-title-company">Organization for the Prohibition of Chemical Weapons</p>
+					<p class="text-title-company">Graduate Student</p>
+					<p class="text-title-company">King's College London</p>
 				</div>
 				<div class="col">
-					<img src="assets/opcw.png" alt="Company Logo">
+					<img src="assets/kcl logo.jpg" alt="Company Logo">
 				</div>
 			</div>
 		</div>
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="mailto:nica.bigornia@opcw.org">
+		<a href="mailto:nick.bigornia@kcl.ac.uk">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/mail.svg" alt="Email Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">nica.bigornia@opcw.org</p>
+						<p class="text-detail">nick.bigornia@kcl.ac.uk</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -73,14 +73,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.opcw.org">
+		<a href="https://www.kcl.ac.uk/dsd">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/globe.svg" alt="Website Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">www.opcw.org</p>
+						<p class="text-detail">https://www.kcl.ac.uk/dsd</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
@@ -91,14 +91,14 @@
 	</section>
 
 	<section class="bg-color-white secondary-info">
-		<a href="https://www.google.com/maps/place/Organisation+for+the+Prohibition+of+Chemical+Weapons+(OPCW)/@52.0913677,4.2131638,13z/data=!4m9!1m2!2m1!1sopcw!3m5!1s0x47c5b0c7e15ee87f:0xfa7c7523f39a9e0c!8m2!3d52.0913812!4d4.2832443!15sCgRvcGN3kgEbYXNzb2NpYXRpb25fb3Jfb3JnYW5pemF0aW9u4AEA">
+		<a href="https://goo.gl/maps/nDvQFfqKvYYqMcow7">
 			<div class="container">
 				<div class="row detail">
 					<div class="col">
 						<img src="assets/pin.svg" alt="Address Icon"">
 					</div>
 					<div class="col is-8">
-						<p class="text-detail">Johan de Wittlaan 32, 2517 JR Den Haag</p>
+						<p class="text-detail">Strand, London WC2R 2LS</p>
 					</div>
 					<div class="col">
 						<img src="assets/right-arrow.svg" alt="Right Arrow" height="50%" width="40%">
